On firefox, if you press control and click a table element, it will highlight the element. This is undesirable behavior, so I have changed the global css to prevent this

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,3 +23,13 @@ body {
 .scroll-width::-webkit-scrollbar-thumb {
   width: 10px;
 }
+
+html, body, div, a, i, button, select, option, optgroup, hr, br {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  cursor: default;
+}
